mobile menu nowrap fix

--- a/src/styles/components/dropdowns.less
+++ b/src/styles/components/dropdowns.less
@@ -12,7 +12,7 @@
     li {
       display: block;
       float: none;
-      white-space: nowrap;
+      //white-space: nowrap;
       line-height: 1;
       padding: 15px;
       a{
